--- a/pom.xml
+++ b/pom.xml
@@ -180,10 +180,41 @@
 	    </plugins>
     </build>
 
-    
+    <repositories>
+        <repository>
+            <id>spring-releases</id>
+            <name>Spring Releases</name>
+            <url>https://repo.spring.io/libs-release</url>
+        </repository>
+        <repository>
+            <id>org.jboss.repository.releases</id>
+            <name>JBoss Maven Release Repository</name>
+            <url>https://repository.jboss.org/nexus/content/repositories/releases</url>
+        </repository>
+
+        <repository>
+            <id>central-repos3</id>
+            <name>Central Repository3</name>
+            <url>http://maven.jahia.org/maven2/</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
+    </repositories>
+
+    <pluginRepositories>
+        <pluginRepository>
+            <id>spring-releases</id>
+            <name>Spring Releases</name>
+            <url>https://repo.spring.io/libs-release</url>
+        </pluginRepository>
+    </pluginRepositories>
 
     <properties>
-        <hibernate.core.version>5.1.0.Final</hibernate.core.version>
+        <hibernate.core.version>4.3.8.Final</hibernate.core.version>
         <mysql.version>5.1.34</mysql.version>
         <druid.version>1.0.15</druid.version>
         <spring.version>4.3.3.RELEASE</spring.version>
